# Effort-AIGI-Detection

./: .gitignore  .kilocodeignore  AGENTS.md  FACE_DETECTION_README.md  FINETUNING_README.md  RAW_FILE_PROCESSING_ARCHITECTURE.md  README-VN.md  README.md  README_sample_images.md  RETINA_FACE_README.md  clip_vision_mlx.py  collabdiff_tree.txt  convert_to_lmdb.py  convert_weights.py  effort.sh  effort_detector_mlx.py  effort_training_plan.md  eval.sh  face_detection_filter.py  face_detection_filter_retinaface.py  face_detection_filter_yolo.py  finetune.sh  infer.sh  inference_quan_val.txt  inference_results_perf.txt  inference_results_perf_final.txt  kaggle.py  mac_train.py  main.py  mlx.py  mlx_inference.py  newer_datasets_analysis.md  prediction_summary.txt  prompt.md  pyproject.toml  read_lmdb.py  sample_images.py  svd_residual_mlx.py  test_face_detection.py  test_lmdb.py  (+6 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
backend/: gradcam_utils.py  server.py  video_utils.py
evaluation_results/: 1-16-ff-nBF-TkH.json  1-16-ff-nBF-TkH_ad_methods.json  1-16-ff-nBF-df40-methods.json  1-16-ff-nBF-df40-uc.json  1-16-ff-nBF-df40-uc2.json  1-16-ff-nBF-df40.json  1-19-ff-nBF-DIFF.json  1-19-ff-nBF-humans100k.json  1-20-ff-nBF-FNet-val_perturb_release.json  1-21-ff-nBF-FNet-val_merged.json  1-21-nBF-TkH-methods.json  1-22-ff-nBF-df40_full_Mixed.json  1-27-ff-nBF-CDFv3.json  1-27-ff-nBF-DiFFFace.json  12_16_ff_genimage_genimage.json  12_17_ff_df40s.json  12_17_ff_genimage_chameleon.json  12_17_ff_genimage_df40_s.json  12_17_ff_genimage_df40s.json  12_17_sdv14_df40s.json  12_18_ff_genimage_chameleonFaces_df40s.json  12_18_ff_genimage_chameleonFaces_quan.json  12_18_ff_genimage_chameleonFaces_quan_FS.json  12_18_ff_quan.json  12_19_ff_batchFaces_GenImageFaces.json  12_19_ff_batchFaces_chameleonFacesFull.json  12_19_ff_batchFaces_df40_s.json  12_19_ff_batchedFaces_chameleonFaces.json  12_20_ff_batchFaces_quandataset_val.json  12_25_ff_batchFacesAll_quan_chameleon_val.json  12_29_ff_batchFaceAll_df40_s.json  1_15_ff_nBF_DFITW_P.json  1_15_ff_nBF_genimageFlat.json  1_5_ff_newBatchFacesAll.json  1_7_ff_all.json  1_7_ff_batchFacesAll_all.json  1_7_ff_nBF_all.json  1_7_ff_newBachFace_Chameleon_quan_FS.json  1_7_ff_newBatchFace_all.json  Celeb-DF-v2_eval_20251211_090656.json  (+6 more)
frontend/: package-lock.json
inference_results/: batchFacesAll-facedata-ivansivkovenin_faces.txt  batchFacesAll-quan_faceswap2000-val.txt  newBatchFaces-val-fake.txt  newBatchFaces-val-real.txt
logs_output/: metrics.csv  metrics.json  pickle_summaries.txt
openspec/: project.md
utils/: compare_checkpoints.py  compare_checkpoints_summary.py  count_images.py  crop_faces_dataset.py  download_kaggle.py  faceDetect.sh  part.py  (+22 more)
(+94 files in other folders)
