[project]
name = "effort-aigi-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "clip",
    "dataset>=1.6.2",
    "detectors>=0.1.11",
    "dlib>=20.0.0",
    "efficientnet-pytorch>=0.7.1",
    "einops>=0.8.1",
    "filterpy>=1.4.5",
    "fvcore>=0.1.5.post20221221",
    "imageio>=2.37.2",
    "imgaug>=0.4.0",
    "imutils>=0.5.4",
    "kornia>=0.8.2",
    "logging>=0.4.9.6",
    "loralib>=0.1.2",
    "loss>=0.1.2",
    "network>=0.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.7",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "setuptools>=80.9.0",
    "simplejson>=3.20.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchtoolbox>=0.1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
